@@ -10,8 +10,9 @@ Architecture: any
 Depends: ${shlibs:Depends}, perl-modules, liberror-perl, libdigest-sha1-perl, cpio
 Recommends: git-doc, patch, less, rsync, curl, ssh-client
 Suggests: git-arch, git-cvs, git-svn, git-email, git-daemon-run, git-gui, gitk, gitweb, cogito
-Replaces: cogito (<< 0.16rc2-0)
-Conflicts: git (<< 4.3.20-11), qgit (<< 1.5.5)
+Replaces: cogito (<< 0.16rc2-0), git-completion
+Conflicts: git (<< 4.3.20-11), qgit (<< 1.5.5), git-completion
+Provides: git-completion
 Description: fast, scalable, distributed revision control system
  Git is popular version control system designed to handle very large
  projects with speed and efficiency; it is used mainly for various open
