@@ -7,6 +7,9 @@ git-core (1:1.5.2.5-1) unstable; urgency=low
   * dbian/control: git-core: Depends: cpio (closes: #438057).
   * debian/git-core.README.Debian: fix typos (closes: #438932).
   * debian/versions.upstream, debian/changelog.upstream: adapt.
+  * debian/rules, debian/control: install git-completion.bash from contrib as
+    /etc/bash_completion.d/git; git-core: Conflicts:, Provides:, Replaces:
+    git-completion (closes: #437532, thx Sebastian Harl).
 
  -- Gerrit Pape <pape@smarden.org>  Sat, 25 Aug 2007 17:56:20 +0000
 
